--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="IMG_3404.JPG" alt="image of myself" /></a>
+					<a href="#" class="image avatar"><img src="//IMG_3404.JPG" alt="image of myself" /></a>
 					<h1><strong>CS student, fitness enthusiast &amp; craft beer lover</strong><br />
 				</h1>
 				</div>
