--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/arios134/arios134.portfolio/blob/master/mock_webpage.html" class="image fit thumb"><img src="//mockupWebpageThumbnail.jpg" alt="mockup webpage thumbnail"/></a>
-								<h3>HTML webpage</h3>
+								<h3><a href="mock_webpage.html" HTML webpage</a></h3>
 								<p>First attempt using proper HTML &amp; CSS standards. The coding environment is through W3Schools,
 									a free online educational resource for web development. I combine as many
 									lessons into one webpage.
