--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/arios134/arios134.portfolio/blob/master/myTributePage.html" class="image fit thumb"><img src="//tributeWebpageThumbnail.jpg" alt="tribute webpage thumbnail"/></a>
-								<h3>FreeCodeAcademy: Tribute Page</h3>
+								<a href="myTributePage.html"><h3>FreeCodeAcademy: Tribute Page</h3></a>
 								<p>Using another free online education source, I have completed their certification projects
 									to show compentency.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/arios134/arios134.portfolio/blob/master/PhotoboothTemplate.html" class="image fit thumb"><img src="//photoboothThumbnail.jpg" alt="photobooth business webpage thumbnail"/></a>
-								<h3>Photobooth company site</h3>
+								<a href="PhotoboothTemplate.html"><h3>Photobooth company site</h3></a>
 								<p>I attempted to design a new brand name for a friend whose business is a photobooth company.
 									The goal was to familiarize myself with w3.css framework to make a professional landing page with responsive capabilities.
 								</p>
