--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<h2>Completed Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/arios134/arios134.portfolio/blob/master/mock_webpage.html" class="image fit thumb"><img src="arios134.portfolio/mockupWebpageThumbnail.jpg" alt="mockup webpage thumbnail"/></a>
+								<a href="https://github.com/arios134/arios134.portfolio/blob/master/mock_webpage.html" class="image fit thumb"><img src="mockupWebpageThumbnail.jpg" alt="mockup webpage thumbnail"/></a>
 								<a href="mock_webpage.html"><h3>HTML webpage</h3></a>
 								<p>First attempt using proper HTML &amp; CSS standards. The coding environment is through W3Schools,
 									a free online educational resource for web development. I combine as many
@@ -59,13 +59,13 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/arios134/arios134.portfolio/blob/master/myTributePage.html" class="image fit thumb"><img src="arios134.portfolio/tributeWebpageThumbnail.jpg" alt="tribute webpage thumbnail"/></a>
+								<a href="https://github.com/arios134/arios134.portfolio/blob/master/myTributePage.html" class="image fit thumb"><img src="tributeWebpageThumbnail.jpg" alt="tribute webpage thumbnail"/></a>
 								<a href="myTributePage.html"><h3>FreeCodeAcademy: Tribute Page</h3></a>
 								<p>Using another free online education source, I have completed their certification projects
 									to show compentency.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/arios134/arios134.portfolio/blob/master/PhotoboothTemplate.html" class="image fit thumb"><img src="arios134.portfolio/photoboothThumbnail.jpg" alt="photobooth business webpage thumbnail"/></a>
+								<a href="https://github.com/arios134/arios134.portfolio/blob/master/PhotoboothTemplate.html" class="image fit thumb"><img src="photoboothThumbnail.jpg" alt="photobooth business webpage thumbnail"/></a>
 								<a href="PhotoboothTemplate.html"><h3>Photobooth company site</h3></a>
 								<p>I attempted to design a new brand name for a friend whose business is a photobooth company.
 									The goal was to familiarize myself with w3.css framework to make a professional landing page with responsive capabilities.
