--- a/myTributePage.html
+++ b/myTributePage.html
@@ -62,7 +62,7 @@ a:hover {
   <title>Tribute Page Project</title>
   <h1 id="title">My Pupperz, Giuseppi!</h1>
     <div id="img-div">
-      <img id="image" src="arios134.arios134.portfolio/giuseppe2.JPG" alt="My favorite frenchie">
+      <img id="image" src="/arios134.arios134.portfolio/giuseppe2.JPG" alt="My favorite frenchie">
       <figcaption id="img-caption">
         Guiseppi enjoying his bed, toys and birthday cake!
       </figcaption>
