--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="" class="image avatar"><img src="IMG_3404.JPG" alt="image of myself"/></a>
-					<h1><strong>CS student, fitness enthusiast &amp; craft beer lover</strong><br />
+					<h1><strong>CS student, fitness enthusiast &amp;<br />craft beer lover</strong>
 				</h1>
 				</div>
 			</header>
