--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="" class="image avatar"><img src="IMG_3404.JPG" alt="image of myself"/></a>
-					<h1><strong>CS student, fitness enthusiast &amp;<br />craft beer lover</strong>
+					<h1><strong>Alexandro Rios <br />
+					CS student, fitness enthusiast &amp;<br />craft beer lover</strong>
 				</h1>
 				</div>
 			</header>
@@ -30,15 +31,27 @@
 						<header class="major">
 							<h2>A Little About Me</h2>
 						</header>
-						<p>Originally a non-profit leader with a B.S. in Kinesiology, I decided to pursue another interest of mine - technology. I found a non-profit online school that offered Computer Science
-							and knew that I had to take this opportunity in changing my career goals. In addition to completing coursework for the A.S-CS program,
+						<p>Originally a non-profit leader with a B.S. in Kinesiology, I decided to pursue another interest of mine - technology. A non-profit online school offered me this opportunity. In addition to completing coursework for the A.S-CS program,
 							I have been self-learning more skills and technologies through free resources such as W3Schools.com, FreeCodeAcademy and
 							a lot of YouTube!
 						</p>
 						<p>	The work of Web Development is most appealing to me so most of my focus has been front-end development,
 							though, I am moving towards learning back-end development and refining my programming skills.
 							Anticipated completion date for the A.S.-CS program is August 2020.<br />
-							Aside from studying, I am big into learning the biomechanics of movement and incorporating them into my routines.
+						</p>
+						<h3>Skills</h3>
+						<section>
+							<ul>
+								<li>Jave &amp; Python</li>
+								<li>HTML, HTML5, CSS</li>
+								<li>Knowledgable with web frameworks: Wordpress &amp; W3.CSS </li>
+								<li>Knowledgable with JavaScript, PHP &amp; SQL </li>
+								<li>Experience using IDE environments: NetBeans, Eclipse, Visual Studio Code, Local by Flywheel </li>
+								<li>In progress learning: Angular, Node.JS, React </li>
+						</section>
+							</ul>
+							
+							<p>Aside from studying, I am big into learning the biomechanics of movement and incorporating them into my routines.
 							I also enjoy the art and science behind beer - so much so that I have homebrewed and worked at a large scale brewery!
 						</p>
 						<ul class="actions">
