--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h3>Skills</h3>
 						<section>
 							<ul>
-								<li>Jave &amp; Python</li>
+								<li>Knowledgable in Java &amp; Python</li>
 								<li>HTML, HTML5, CSS</li>
 								<li>Knowledgable with web frameworks: Wordpress &amp; W3.CSS </li>
 								<li>Knowledgable with JavaScript, PHP &amp; SQL </li>
