--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="" class="image avatar"><img src="IMG_3404.JPG" alt="image of myself"/></a>
 					<h1><strong>Alexandro Rios <br />
-					CS student, fitness enthusiast &amp;<br />craft beer lover</strong>
+					CS student &amp; fitness enthusiast</strong>
 				</h1>
 				</div>
 			</header>
@@ -51,8 +51,8 @@
 						</section>
 							</ul>
 							
-							<p>Aside from studying, I am big into learning the biomechanics of movement and incorporating them into my routines.
-							I also enjoy the art and science behind beer - so much so that I have homebrewed and worked at a large scale brewery!
+							<p>Aside from studying, I am big into learning the biomechanics of movement and incorporating new exercises into my routines.
+							I also enjoy the science behind brewing - I have tried my hand at homebrewing and worked at a long-standing production brewery!
 						</p>
 						<ul class="actions">
 							<li><a href="#resume" class="button">See Full Resume</a></li>
