--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
 									The goal was to familiarize myself with w3.css framework to make a professional landing page with responsive capabilities.
 								</p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article> -->
+							<article class="col-6 col-12-xsmall work-item">
+								<a href=""https://github.com/arios134/brewCompanyLandingPage/beerLandingPage.html" class="image fit thumb"><img src="https://github.com/arios134/brewCompanyLandingPage/landPageThumbnail.jpg" alt="brewing company page thumbnail" /></a>
+								<h3>Brewing Co. Page using FlexBox</h3>
+								<p>Focused on using FlexBox and plain CSS to build a simple, yet responsive landing page. Great to use as an online resume for a brewer or a brewing company.</p>
+							</article>
+							
 							<!-- SHOWCASING 4 PROJECTS <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
