--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href=""https://github.com/arios134/brewCompanyLandingPage/beerLandingPage.html" class="image fit thumb"><img src="https://github.com/arios134/brewCompanyLandingPage/landPageThumbnail.jpg" alt="brewing company page thumbnail" /></a>
+								<a href="https://github.com/arios134/brewCompanyLandingPage/beerLandingPage.html" class="image fit thumb"><img src="https://github.com/arios134/brewCompanyLandingPage/landPageThumbnail.jpg" alt="brewing company page thumbnail" /></a>
 								<h3>Brewing Co. Page using FlexBox</h3>
 								<p>Focused on using FlexBox and plain CSS to build a simple, yet responsive landing page. Great to use as an online resume for a brewer or a brewing company.</p>
 							</article>
