--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
 						<h2>Completed Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/arios134/arios134.portfolio/blob/master/mock_webpage.html" class="image fit thumb"><img src="mockupWebpageThumbnail.jpg" alt="mockup webpage thumbnail"/></a>
-								<a href="mock_webpage.html"><h3>HTML webpage</h3></a>
-								<p>First attempt using proper HTML &amp; CSS standards. The coding environment is through W3Schools,
-									a free online educational resource for web development. I combine as many
-									lessons into one webpage.
+								<a href="https://github.com/arios134/arios134.portfolio/blob/master/technicalDocuPage.html" class="image fit thumb"><img src="technicalDocuPage.jpg" alt="techincal document webpage thumbnail"/></a>
+								<a href="technicalDocuPage.html"><h3>Technical Document Page</h3></a>
+								<p>A project through freeCodeAcademy, this technical page uses flexbox combined with HTML, media queries &amp external CSS. The technical document
+									gives an easy to follow tutorial on basic HTML structure to a beginner student.
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
